# hydra-pay

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  README.md  cardano-libs.nix  default.nix  push-docker.sh  release.nix  seed-devnet.sh  shell.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs  CardanoNodeInfo.hs  Config.hs  HydraPay.hs  ParseConfig.hs  Paths.hs
backend/src-bin/: main.hs
backend/src/Hydra/: Devnet.hs
backend/src/HydraPay/: Client.hs  DB.hs  Logging.hs  Network.hs  Server.hs  SubmitTxDirectTest.hs  WebSocket.hs  WebSocketDemo.hs
cardano-project/: base.nix  default.nix  extras.nix
cardano-project/.obelisk/impl/: github.json
cardano-project/cardano-overlays/: default.nix  ghcjs.nix
cardano-project/cardano-overlays/cardano-packages/: default.nix
cardano-project/cardano-overlays/cardano-packages/dep/Win32-network/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/aeson/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/base64-bytestring/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/bech32/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-addresses/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-base/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-crypto/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-ledger/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-node/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-prelude/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-sl-x509/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/cardano-wallet/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/criterion/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/ekg-json/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/flat/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/fmt/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/ghcjs-base/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/ghcjs-base-stub/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/goblins/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/haskell-hedgehog/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/hedgehog-extras/: github.json
cardano-project/cardano-overlays/cardano-packages/dep/hs-memory/: github.json
cardano-project/cardano-overlays/cardano-wallet-coin-selection/: default.nix
cardano-project/cardano-overlays/dep/cryptonite-ghcjs/: git.json
cardano-project/cardano-overlays/dep/hackage-overlay-ghcjs/: github.json
cardano-project/cardano-overlays/dep/iohk-nix/: github.json
cardano-project/cardano-overlays/dep/plutus-ghcjs-cross/: github.json
cardano-project/cardano-overlays/dep/terminal-size/: github.json
cardano-project/dep/commutative-semigroups/: github.json
cardano-project/dep/constraints-extras/: github.json
cardano-project/dep/entropy/: github.json
cardano-project/dep/haskell-hexstring/: github.json
cardano-project/dep/heist/: github.json
cardano-project/dep/hspec-webdriver-clone/: github.json
cardano-project/dep/logging-effect-colors/: github.json
cardano-project/dep/logging-effect-syslog/: github.json
cardano-project/dep/reflex-gadt-api/: github.json
cardano-project/dep/rhyolite/: git.json  github.json
common/: common.cabal
common/src/Common/: Api.hs  DemoApi.hs  Helpers.hs  Route.hs
common/src/Hydra/: ClientInput.hs  ServerOutput.hs  Snapshot.hs  Types.hs
common/src/HydraPay/: Api.hs  Config.hs
config/backend/: api-key  bank.cardano.sk  bank.cardano.vk  prepare-devnet.sh
config/mainnet/: alonzo-genesis.json  config.json  shelley-genesis.json
config/preprod/: alonzo-genesis.json  config.json  topology.json
config/preview/: alonzo-genesis.json  config.json  topology.json
config/sanchonet/: config.json
demo/: prepare-devnet.sh  seed-devnet.sh
dep/aeson-gadt-th/: github.json
dep/browser-extension/: git.json
dep/bytestring-aeson-orphans/: github.json
dep/cardano-addresses/: github.json
dep/cardano-node/: github.json
dep/cardano-project/: git.json
dep/cardano-transaction-builder/: github.json
dep/cardano-wallet/: github.json
dep/flake-compat/: github.json
dep/hydra/: github.json
dep/hydra-poc/: github.json
dep/juicy.pixels.ghcjs/: github.json
dep/reflex-gadt-api/: github.json
dep/secp256k1-haskell/: github.json
dep/snap-core/: github.json
dep/vessel/: github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: LiveDocs.hs
hydra-pay/: hydra-pay.cabal
hydra-pay-core/: hydra-pay-core.cabal
hydra-pay-core/src/HydraPay/: Logging.hs  Orphans.hs  PaymentChannel.hs  PortRange.hs  Types.hs  Utils.hs
hydra-pay-core/src/HydraPay/Cardano/Hydra/: Api.hs  ChainConfig.hs  RunningHead.hs  Status.hs
hydra-pay-core/src/HydraPay/Cardano/Hydra/Api/: ClientInput.hs
hydra-pay/src/: HydraPay.hs
hydra-pay/src-bin/: main.hs
hydra-pay/src/Cardano/Api/: Extras.hs
hydra-pay/src/Cardano/Transaction/: CardanoApi.hs  Extras.hs
hydra-pay/src/HydraPay/: Api.hs  Bank.hs  Client.hs  Config.hs  Database.hs  Host.hs  Instance.hs  Logging.hs  Path.hs  PaymentChannel.hs  Proxy.hs  State.hs  Transaction.hs  Types.hs  Utils.hs  Watch.hs  Worker.hs
hydra-pay/src/HydraPay/Cardano/: Cli.hs  Hydra.hs  Node.hs
hydra-pay/src/HydraPay/Cardano/Hydra/: Api.hs  Tools.hs
hydra-pay/src/HydraPay/Cardano/Hydra/Api/: ClientInput.hs
hydra-pay/src/HydraPay/Database/: Workers.hs
hydra-pay/src/HydraPay/PaymentChannel/: Postgres.hs
livedoc-devnet/: LICENSE
nix/patches/: cardano-node-8.0.0-fix-default-nix.patch
scripts/: prepare-devnet.sh
static/: api.html  api.js  wallet.js
types/: hydra-pay-types.cabal
types/src/Hydra/: Snapshot.hs
types/src/HydraPay/: Api.hs
(+13 files in other folders)
