name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , process
               , async
               , which
               , monad-logger
               , logging-effect
               , prettyprinter
               , string-interpolate
               , containers
               , text
               , witherable
               , snap-core
               , io-streams
               , websockets-snap
               , websockets
               , some
               , directory
               , reflex-gadt-api
               , aeson
               , gargoyle-postgresql
               , gargoyle-postgresql-connect
               , gargoyle-postgresql-nix
               , gargoyle
               , resource-pool
               , postgresql-simple
               , beam-core
               , beam-postgres
               , beam-automigrate
               , bytestring
               , uuid
               , http-client
               , http-conduit
               , temporary
               , stm
               , monad-loops
               , mtl
               , time
               , time-compat
               , transformers

  default-extensions:
    OverloadedStrings
    LambdaCase
    GADTs
    ScopedTypeVariables
    OverloadedStrings
    FlexibleContexts
    QuasiQuotes
    DeriveGeneric

  exposed-modules:
    Backend
    HydraPay
    HydraPay.Network
    HydraPay.Client
  other-modules:
    Paths
    Hydra.Devnet
    HydraPay.WebSocket
    HydraPay.SubmitTxDirectTest
    CardanoNodeInfo
    
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
