name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , reflex-gadt-api
               , aeson
               , aeson-gadt-th
               , constraints-extras
               , containers
               , time
               , lens
               , attoparsec

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuantifiedConstraints
    RecursiveDo
    ScopedTypeVariables
    TypeFamilies
    UndecidableInstances

  exposed-modules:
    Common.Api
    Common.Route
    Common.Helpers

    Hydra.Types
    Hydra.ServerOutput
    Hydra.ClientInput
    Hydra.Snapshot
    HydraPay.Api

  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
