name:          hydra-pay
version:       0.1
cabal-version: >=1.10
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      aeson
    , base
    , beam-automigrate
    , beam-core
    , beam-postgres
    , bytestring
    , cardano-api
    , cardano-transaction
    , containers
    , dependent-sum
    , directory
    , filepath
    , fsnotify
    , gargoyle-postgresql-connect
    , hydra-pay-core
    , lens
    , lens-aeson
    , managed
    , mtl
    , postgresql-simple
    , process
    , reflex
    , reflex-fsnotify
    , resource-pool
    , stm
    , temporary
    , text
    , time
    , transformers
    , typed-process
    , websockets
    , which

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuantifiedConstraints
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    UndecidableInstances

  exposed-modules:
    Cardano.Transaction.CardanoApi
    Cardano.Transaction.Extras
    HydraPay
    HydraPay.Cardano.Cli
    HydraPay.Cardano.Hydra
    HydraPay.Cardano.Hydra.Tools
    HydraPay.Cardano.Node
    HydraPay.Database
    HydraPay.Host
    HydraPay.PaymentChannel.Postgres
    HydraPay.Proxy
    HydraPay.Transaction
    HydraPay.Watch

  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -fno-show-valid-hole-fits
