name:          hydra-pay
version:       0.1
cabal-version: >=1.10
build-type:    Simple

library
  hs-source-dirs:     src
  build-depends:
      aeson
    , base
    , beam-automigrate
    , beam-core
    , beam-postgres
    , bytestring
    , bytestring-aeson-orphans
    , cardano-api
    , cardano-transaction
    , containers
    , dependent-sum
    , directory
    , filepath
    , fsnotify
    , gargoyle-postgresql-connect
    , hydra-pay-core
    , lens
    , lens-aeson
    , managed
    , mtl
    , postgresql-simple
    , process
    , rhyolite-beam-db
    , rhyolite-beam-task-worker-backend
    , rhyolite-beam-task-worker-types
    , reflex
    , reflex-fsnotify
    , resource-pool
    , stm
    , temporary
    , text
    , time
    , transformers
    , typed-process
    , websockets
    , which
    , async
    , http-client
    , http-conduit
    , snap-server
    , websockets-snap
    , optparse-applicative
    , cardano-ledger-core

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuantifiedConstraints
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    UndecidableInstances

  exposed-modules:
    Cardano.Transaction.CardanoApi
    Cardano.Transaction.Extras
    Cardano.Api.Extras
    HydraPay
    HydraPay.Config
    HydraPay.Path
    HydraPay.Cardano.Cli
    HydraPay.Cardano.Hydra
    HydraPay.Cardano.Hydra.Tools
    HydraPay.Cardano.Node
    HydraPay.Database
    HydraPay.Database.Workers
    HydraPay.PaymentChannel.Postgres
    HydraPay.Proxy
    HydraPay.Bank
    HydraPay.Transaction
    HydraPay.Watch
    HydraPay.Worker
    HydraPay.State

  ghc-options:
    -Wall -Wredundant-constraints -Wincomplete-uni-patterns
    -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable hydra-pay
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , hydra-pay
